Added improvements. Filter operation predicates added to separate methods. Added some minor changes